make index file

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <!-- google font end -->
 
     <!-- style sheet -->
-     <link rel="stylesheet" href="css/home.css">
+     <link rel="stylesheet" href="public/css/home.css">
     <!-- style sheet end -->
 </head>
 <body>
     <!-- navbar -->
     <nav class="navbar">
-        <img src="img/logo.png" alt="Logo">
+        <img src="public/img/logo.png" alt="Logo">
         <ul class="links-container">
             <li class="link-item">
                 <a href="/" class="link">Home</a>
             </li>
             <li class="link-item">
-                <a href="/edit" class="link">Editor</a>
+                <a href="public/edit.html" class="link">Editor</a>
             </li>
         </ul>
     </nav>
@@ -40,7 +40,7 @@
                 Blog
                 <span class="no-fill">writing</span>
             </h1>
-            <a href="/edit" class="btn">write a blog</a>
+            <a href="public/edit.html" class="btn">write a blog</a>
         </div>
     </header>
     <!-- header section end -->
@@ -61,7 +61,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
      
-    <script type="module" src="js/utiles.js"></script>
-    <script src="js/home.js"></script>
+    <script type="module" src="public/js/utiles.js"></script>
+    <script src="public/js/home.js"></script>
 </body>
 </html>
